# slipstream

./: .crush.json  .dockerignore  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  .roomodes  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  QWEN.md  README.md  WARP.md  biome.json  compose.override.yml  compose.yml  error.json  package.json  rustfmt.toml  slipstream.code-workspace
.claude/: settings.json  settings.toml
.github/: copilot-instructions.md
.github/chatmodes/: rust-gpt-4.1-beast-mode.chatmode.md
.github/instructions/: graphiti.instructions.md  repo.instructions.md  taming-copilot.instructions.md  zep.instructions.md
.github/prompts/: api-client-code-review.prompt.md
.github/workflows/: Tests.yml  ci.yml
.kilocode/rules-systems-architect/: 3_common_patterns.xml  5_examples.xml  7_communication.xml
.mise/tasks/: build  format  genuuid7  lint  sort-deps
.qoder/quests/: restate-axum-routerrs.md
.roo/rules/: rust-expert.md  typescript-expert.md
.roo/rules-systems-architect/: 1_workflow.xml  2_best_practices.xml  4_tool_usage.xml  6_error_handling.xml
apps/restate-openai-agent/: Cargo.toml
apps/slipstream-b2-listener/: .dockerignore  Cargo.toml  README.md  func.yaml
apps/slipstream-b2-listener/src/: main.rs
config/: default.toml
crates/slipstream-ai/: Cargo.toml  README.md  build.rs
crates/slipstream-ai/examples/: basic_minimal_local.rs
crates/slipstream-ai/src/: accumulator.rs  agent.rs  content.rs  engine.rs  error.rs  events.rs  lib.rs  messages.rs  prompt.rs
crates/slipstream-ai/src/agent/: tool.rs
crates/slipstream-ai/src/chunking/: chunker.rs
crates/slipstream-ai/src/completer/: config.rs  mod.rs  openailike.rs
crates/slipstream-ai/src/completer/openailike/: accumulator.rs  conversions.rs
crates/slipstream-ai/src/completer/openailike/fixtures/: mixed_content_and_tool_stream.json  simple_content_stream.json  tool_call_stream.json
crates/slipstream-ai/src/embedding/: mod.rs  openailike.rs  workflow.rs
crates/slipstream-ai/src/executor/: context.rs  local.rs  local_integration_tests.rs  local_tool_tests.rs  mod.rs
crates/slipstream-ai/src/grammars/: mod.rs
crates/slipstream-ai/src/messages/: content.rs  session.rs
crates/slipstream-core/: Cargo.toml  README.md
crates/slipstream-core/src/: definitions.rs  events.rs  lib.rs  messages.rs
crates/slipstream-core/src/messages/: content.rs  session.rs
crates/slipstream-core/src/registry/: http.rs  http_model.rs  memory.rs  memory_agent.rs  memory_model.rs  memory_tool.rs  mod.rs
crates/slipstream-core/src/registry/http/: http_agent.rs  http_model.rs  http_tool.rs
crates/slipstream-core/src/registry/memory/: memory_agent.rs  memory_model.rs  memory_tool.rs
crates/slipstream-memory/: Cargo.toml  README.md
crates/slipstream-memory/src/: edges.rs  engine.rs  error.rs  lib.rs  nodes.rs  validation.rs
crates/slipstream-memory/src/migrations/: concept_migration.rs  includes_migration.rs  interaction_migration.rs  mentions_migration.rs  mod.rs  relates_migration.rs  theme_migration.rs
crates/slipstream-memory/src/mutations/: mod.rs  save_concept.rs  save_interaction.rs  save_theme.rs
crates/slipstream-memory/src/queries/: get_concept_by_uuid.rs  get_interaction_by_uuid.rs  get_theme_by_uuid.rs  mod.rs
crates/slipstream-memory/src/service/: interaction.rs
crates/slipstream-metadata/: Cargo.toml  README.md
crates/slipstream-metadata/src/: config.rs  definitions.rs  error.rs  http.rs  lib.rs  store.rs
crates/slipstream-metadata/src/http/: http_agent.rs  http_model.rs  http_tool.rs
crates/slipstream-metadata/src/memory/: memory_agent.rs  memory_model.rs  memory_tool.rs
crates/slipstream-metadata/src/nats/: agent.rs  mod.rs  model.rs  setup.rs  tool.rs
crates/slipstream-objectstorage/: Cargo.toml
crates/slipstream-objectstorage/src/: lib.rs  s3.rs
crates/slipstream-registry/: README.md
crates/slipstream-restate/: Cargo.toml
crates/slipstream-restate/src/: axum.rs  lib.rs
crates/slipstream-restate/src/greeter/: mod.rs
crates/slipstream-restate/src/handlers/: mod.rs
crates/slipstream-restate/src/ratelimit/: mod.rs  service.rs  token_bucket.rs
crates/slipstream-server/: Cargo.toml  test-key.json  test-user.env  test-user.json
crates/slipstream-server/examples/: simple.rs
crates/slipstream-server/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  server.rs  testing.rs
crates/slipstream-server/src/services/: add_messages.rs  files.rs  mod.rs  uploads.rs
crates/slipstream-server/src/storage/: mod.rs  s3.rs
crates/slipstream-store/: Cargo.toml  README.md  build.rs
crates/slipstream-store/docs/: save-durability-design.md
crates/slipstream-store/src/: bulk_operations_tests.rs  config.rs  crash_recovery_tests.rs  database.rs  embeddings.rs  error.rs  graph.rs  invariant_tests.rs  lib.rs  meta.rs  operations.rs  ordered.rs  queries.rs  streams.rs  table_types.rs  traits.rs  transformers.rs
crates/slipstream-store/src/database/tests/: actor_creation_tests.rs  bulk_operations_tests.rs  concurrency_tests.rs  crash_recovery_tests.rs  execute_operations_tests.rs  high_load_tests.rs  index_then_store_tests.rs  invariant_tests.rs  mod.rs  raw_sync_tests.rs  tests_helpers.rs  two_phase_commit_episode_tests.rs  two_phase_commit_tests.rs  vector_search_tests.rs
deploy/: nats-server.conf
deploy/local/: clickhouse.yaml  falkordb.yaml  milvus.yaml  minio.yaml  nats.yaml  qdrant.yaml  restate.yaml  tensorzero.yaml  timescale.yaml  valkey.yaml  wasmcloud.yaml
deploy/restate/: env
docs/: restate_indexing_pipeline.md
docs/future/: replicated-db.md
docs/llm-guides/: 01-configure-subcrate-sqlx-restate.md  02-scaffold-repository-pattern.md  03-add-feature-existing-repository.md
docs/plans/: agent-registry-implementation.md  agent-registry.md
docs/specs/: SERVER_ADD_INTERACTION_SPEC.md  knowledge-graph-api.md  (+4 more)
scripts/: gen-uuid-7.ts
workers/registry/: Cargo.toml  wrangler.toml
workers/registry/migrations/: 0001_initial.sql
workers/registry/src/: lib.rs
workspace-hack/: Cargo.toml
(+121 files in other folders)
