
[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
arrow = "55.2"
arrow-array = "55.2"
mockall = "0.13.1"
assert_cmd = "2.0.17"
async-openai = { git = "https://github.com/casualjim/async-openai", branch = "reqwest-middleware", default-features = false, features = [
  "rustls-webpki-roots",
] }
async-stream = "0.3.6"
async-trait = "0.1"
base64 = "0.22.1"
color-backtrace = "0.7.0"

color-eyre = "0.6"
ctor = "0.4.2"

dotenvy = "0.15"

eyre = "0.6"

futures = "0.3"

jiff = { version = "0.2.15", features = ["serde", "logging"] }
kuzu = { version = "0.11.0", features = ["arrow"] }
lancedb = { version = "0.21.1", features = [
  "polars",
] }
lzma-sys = { version = "0.1.20", features = ["static"] }
nuid = "0.6"

num_cpus = "1.17.0"
opentelemetry = { version = "0.30.0", features = ["trace"] }
parking_lot = "0.12.4"
pin-project-lite = "0.2.16"
predicates = "3.1.3"
rand = { version = "0.9", features = ["std"] }

reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
  "http2",
  "charset",
  "macos-system-configuration",
  "brotli",
  "gzip",
  "deflate",
  "zstd",
] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
reqwest-tracing = { version = "0.5.8", features = ["opentelemetry_0_30"] }

schemars = { version = "1.0.4", features = ["jiff02", "either1", "uuid1"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tempfile = "3.20.0"

thiserror = "2.0.12"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = { version = "0.1.41" }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
typed-builder = "0.21.0"
uuid = { version = "1.17.0", features = ["js", "serde", "v7", "zerocopy"] }

validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
