
[workspace]
members = [ "crates/*", "apps/*", "workspace-hack"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
assert_cmd = "2.0.17"
async-nats = "0.42.0"
async-openai = { git = "https://github.com/casualjim/async-openai", branch = "reqwest-middleware", default-features = false, features = [
  "rustls-webpki-roots",
] }
async-stream = "0.3.6"
async-trait = "0.1"
axum = "0.8.4"
base64 = "0.22.1"
bytes = "1"
color-backtrace = "0.7.0"

color-eyre = "0.6"
ctor = "0.5.0"

dashmap = "6.1.0"
dotenvy = "0.15"

eyre = "0.6"

futures = "0.3"
flume = "0.11"

http = "1"
http-body = "1"
http-body-util = "0.1"
http-cache = { version = "=1.0.0-alpha.2", default-features = false, features = [
  "manager-moka",
  "streaming-tokio",
  "with-http-types",
] }
http-cache-reqwest = { version = "=1.0.0-alpha.2", default-features = false, features = [
  "manager-moka",
  "streaming",
] }
hyper = { version = "1" }

jiff = { version = "0.2.15", features = ["serde", "logging"] }
kuzu = { version = "0.11.1", features = ["arrow"] }
mockall = "0.13.1"
nuid = "0.6"

num_cpus = "1.17.0"
opentelemetry = { version = "0.30.0", features = ["trace"] }
parking_lot = "0.12.4"
pin-project-lite = "0.2.16"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = { version = "0.9", features = ["std"] }
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
  "http2",
  "charset",
  "macos-system-configuration",
  "brotli",
  "gzip",
  "deflate",
  "zstd",
] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
reqwest-tracing = { version = "0.5.8", features = ["opentelemetry_0_30"] }
restate-sdk = { version = "0.6", features = ["schemars"] }
restate-sdk-shared-core  = "0.4.0"

schemars = { version = "1.0.4", features = ["jiff02", "either1", "uuid1"] }
secrecy = { version = "0.10.3", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.20.0"
testcontainers = "0.23"
testcontainers-modules = "0.12.1"
text-splitter = "0.27"
thiserror = "2.0.16"
tiktoken-rs = "0.7"
time = "0.3"
tokenizers = { version = "0.22", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower = "0.5"
tracing = { version = "0.1.41" }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
typed-builder = "0.21.0"
url = "2"
uuid = { version = "1.17.0", features = ["js", "serde", "v7", "zerocopy"] }

validator = { version = "0.20.0", features = ["derive"] }
workspace-hack = { path = "workspace-hack", version = "0.1" }
[profile.release]
opt-level = 3
lto = "thin"
incremental = true
