[package]
name = "slipstream-ai"
version.workspace = true
edition.workspace = true

[dependencies]
async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes = "1"
dashmap.workspace = true
either = "1"
eyre.workspace = true
futures.workspace = true
http = "1"
http-body = "1"
jiff.workspace = true
mockall.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
reqwest-tracing.workspace = true
schemars.workspace = true
secrecy.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
slipstream-core = { path = "../slipstream-core" }
slipstream-metadata = { path = "../slipstream-metadata" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
typed-builder.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
axum = { workspace = true }
color-backtrace.workspace = true
ctor.workspace = true
futures-util = "0.3"
pretty_assertions.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
