[package]
name = "slipstream-core"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
tokio.workspace = true
workspace-hack.workspace = true
