[package]
name = "slipstream-memory"
version.workspace = true
edition.workspace = true

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
eyre.workspace = true
jiff.workspace = true
kuzu.workspace = true
lancedb.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
slipstream-ai = { path = "../slipstream-ai" }
slipstream-store = { path = "../slipstream-store" }
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
color-backtrace.workspace = true
ctor.workspace = true
futures.workspace = true
nuid.workspace = true
predicates.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
