[package]
name = "slipstream-metadata"
version.workspace = true
edition.workspace = true

[features]
default = ["in-memory-providers"]
in-memory = []
in-memory-providers = ["in-memory"]
http-registry = []

[dependencies]
async-nats.workspace = true
async-trait.workspace = true
base64.workspace = true
dashmap.workspace = true
eyre.workspace = true
futures.workspace = true
http-cache.workspace = true
http-cache-reqwest.workspace = true
jiff.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
schemars.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
slipstream-core = { path = "../slipstream-core" }
thiserror.workspace = true
tokio.workspace = true
typed-builder.workspace = true
uuid.workspace = true
validator.workspace = true
