[package]
name = "slipstream-metadata"
version.workspace = true
edition.workspace = true

[dependencies]
async-nats.workspace = true
async-trait.workspace = true
base64.workspace = true
dashmap.workspace = true
futures.workspace = true
jiff.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
typed-builder.workspace = true
uuid.workspace = true
validator.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
