[package]
name = "slipstream-restate"
version.workspace = true
edition.workspace = true

[dependencies]
eyre.workspace = true
rand.workspace = true
restate-sdk.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
