[package]
name = "slipstream-restate"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
bytes = "1"
eyre.workspace = true
futures.workspace = true
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "http2"] }
rand.workspace = true
restate-sdk.workspace = true
restate-sdk-shared-core.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower = "0.5"
tracing.workspace = true
tracing-subscriber.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
