[package]
name = "slipstream-restate"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true, features = ["macros"] }
bytes.workspace = true
eyre.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "http1", "http2"] }
rand.workspace = true
restate-sdk.workspace = true
restate-sdk-shared-core.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# runtime needs only sync primitives here
tokio = { workspace = true, features = ["sync"] }
tower.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
workspace-hack.workspace = true

[build-dependencies]
workspace-hack.workspace = true

[dev-dependencies]
restate-sdk-testcontainers = "0.6.0"  # Match restate-sdk version exactly
# tests need runtime and macros
tokio = { workspace = true, features = ["rt", "macros", "time"] }
workspace-hack.workspace = true



