[package]
name = "slipstream-server"
version.workspace = true
edition.workspace = true

[dependencies]
aide = { version = "0.15", features = ["axum-json", "axum-query", "axum-matched-path", "axum-tokio", "axum-extra-query", "axum-extra-json-deserializer", "redoc", "scalar"] }
async-compression = { version = "0.4", features = ["brotli", "gzip", "deflate", "deflate64", "zlib", "tokio"] }
axum = { workspace = true, features = ["macros", "multipart", "ws", "http2"] }
axum-helmet = "0.2.0"
axum-otel-metrics = "0.12.0"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-tracing-opentelemetry = "0.30.0"
limes = { version = "0.2", features = ["all"] }

# configuration and CLI
clap = { version = "4.5", features = ["derive"] }
confique = { version = "0.3.1", features = ["toml", "json5", "yaml"] }
async-stream.workspace = true
async-trait.workspace = true
# storage and utils
slipstream-objectstorage = { path = "../slipstream-objectstorage" }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-credential-types = {version = "1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1.17.0", default-features = false, features = ["rt-tokio", "behavior-version-latest"] }
bytes.workspace = true
http-body.workspace = true
http-body-util.workspace = true
secrecy.workspace = true
flume.workspace = true

eyre.workspace = true
futures.workspace = true
http = "1"
jiff.workspace = true
listenfd = "1"
rustls = "0.23.29"
rustls-acme = { version = "0.14.0", features = [
  "axum",
  "tls12",
  "tokio",
  "tower",
] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
slipstream-core = { path = "../slipstream-core" }
slipstream-restate = { path = "../slipstream-restate" }
thiserror.workspace = true
url.workspace = true

# sqlx = { version = "0.8.6", features = ["sqlite-unbundled", "runtime-tokio"] }
tokio.workspace = true
tokio-util.workspace = true
tower = { workspace = true }
tower-http = { version = "0.6.6", features = [
  "fs",
  "tracing",
  "trace",
  "cors",
  "compression-full",
] }
tower-layer = { version = "0.3.3" }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
jsonwebtoken = "9"
reqwest = { workspace = true, features = ["json", "rustls-tls", "multipart"] }
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["minio"] }
aws-credential-types = { version = "1", features = [ "test-util"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest", "test-util"] }
aws-sdk-s3 = { version = "1.17.0", default-features = false, features = ["test-util"] }
workspace-hack.workspace = true
bytes.workspace = true
http-body.workspace = true
http-body-util.workspace = true
secrecy.workspace = true
