[package]
name = "slipstream-store"
version.workspace = true
edition.workspace = true

[features]
default = ["ollama-tests"]
ollama-tests = []

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
eyre.workspace = true
futures.workspace = true
jiff.workspace = true
kuzu.workspace = true
lancedb.workspace = true
parking_lot.workspace = true
pin-project-lite.workspace = true
rand.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time = "0.3"
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd = "2.0.17"
color-backtrace = "0.7.0"
ctor = "0.4.2"
nuid = "0.6"
predicates = "3.1.3"
tempfile = "3.20.0"
tracing-subscriber.workspace = true
