[package]
name = "slipstream-store"
version.workspace = true
edition.workspace = true

[features]
default = ["ollama-tests"]
ollama-tests = []

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
eyre.workspace = true
futures.workspace = true
jiff.workspace = true
kuzu.workspace = true
lancedb.workspace = true
parking_lot.workspace = true
pin-project-lite.workspace = true
rand.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
color-backtrace.workspace = true
ctor.workspace = true
nuid.workspace = true
predicates.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
