[package]
name = "slipstream-registry"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Porto Carrero <ivan@flanders.co.nz>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', "d1","queue"] }
worker-macros = { version = "0.6", features = ['http'] }
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v7"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
